new transaction section and a see all function in home tab

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
     - assets/login.jpg
     - assets/homes.png
     - assets/share page.jpg
+    - assets/sharess.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
